src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

html,
body {
    width: 100%;
    height: 100%;
    padding: 0;
    margin: 0;
}

#root {
    padding: 0;
    margin: 0; 
}

.picture-frame.enter .picture-trim {
    opacity: 0.5;
    transform: translate(300%, 300%);
}
.picture-frame.enter-active .picture-trim {
    transform: translate(600%, 600%);
    opacity: 1;
}
.picture-frame.exit .picture-trim {
    opacity: 0.5;
    transform: translate(-300%, -300%);
}
.picture-frame.exit-active .picture-trim {
    opacity: 1;
    transform: translate(-600%, -600%);
}

.picture-frame.enter .picture {
    animation: spin-first 0.25s ease 1 forwards;
}
.picture-frame.enter-active .picture {
    animation: spin-second 0.25s ease 1 forwards;
}
.picture-frame.exit .picture {
    animation: spin-first 0.25s ease 1 forwards;
}
.picture-frame.exit-active .picture {
    animation: spin-second 0.25s ease 1 forwards;
}

.frontend.enter {
}
.frontend.enter-active {
} 
.frontend.exit {
}
.frontend.exit-active {
}

@layer components {
    .background-image {
        background: url("/campfire.gif");   
        background-size: 100% 100%;   
        background-position: 50% 50%;

        @apply fixed top-0 left-0 w-full h-full bg-no-repeat bg-fixed -z-10;
    }

    .header {
        @apply relative flex justify-center items-center h-full w-full min-w-[320px] p-2 sm:p-6 md:p-10 lg:p-14 overflow-hidden;
    }

    .carousel {
        animation: fade-in 1s ease-in forwards;

        @apply absolute w-4/5 h-[45%] sm:h-4/5 overflow-hidden -z-10;
    }

    .picture-frame {
        grid-template-columns: repeat(5, 1fr);
        grid-template-rows: repeat(5, 1fr);
        
        @apply grid gap-2 w-full h-full;
    }

    .picture-trim {
        transition: all ease 0.5s;
    }

    .picture {
        transition: all ease 2s;
        @apply w-full h-full rounded-lg;
    }

    .header-content {
        @apply flex flex-col justify-center items-center w-4/5 sm:h-4/5 h-2/5 bg-slate-700 bg-opacity-60 text-center rounded-3xl shadow-slate-800 shadow-lg backdrop-blur-xl overflow-hidden transition-all;
    }

    .main-header {
        animation: slot-in-left-to-right .5s cubic-bezier(1, 1, 1, 1) forwards;

        @apply m-1 lg:text-9xl md:text-8xl sm:text-7xl text-5xl transition-all select-none pointer-events-none;
    }

    .sub-header {
        animation: slot-in-right-to-left .5s cubic-bezier(1, 1, 1, 1) .25s forwards;

        @apply m-1 text-center lg:text-6xl md:text-5xl sm:text-4xl text-2xl opacity-0 transition-all select-none pointer-events-none;
    }

    .hero-blob {
        animation: blob-rotate 8s ease-in infinite forwards;

        @apply absolute w-[500px] min-w-[320px] aspect-square bg-gradient-to-r from-pink-700 from-25% via-sky-500 via-15% to-purple-500 rounded-full filter blur-2xl opacity-50 -z-10;
    }

    .arrow {
        animation: hop-up .75s cubic-bezier(1, 1, 1, 1) 5s forwards;

        @apply absolute flex bottom-0 left-1/2 p-2 bg-slate-600 hover:bg-slate-500 border-[3px] border-slate-700 hover:border-slate-600 rounded-full shadow-slate-600 hover:shadow-md hover:shadow-slate-800 shadow-sm opacity-0 hover:scale-125 transition-all;
    }

    .main {
        @apply relative flex justify-center items-start h-full w-full min-w-[320px] transition-all overflow-hidden;
    }

    .main-arrow {
        animation: fade-in 1s ease-in 2s forwards;

        @apply absolute p-1 top-1/2 bg-slate-300 hover:bg-slate-100 rounded-full lg:scale-[1.75] md:scale-[1.5] sm:scale-[1.3] lg:hover:scale-[1.8] md:hover:scale-[1.55] sm:hover:scale-[1.35] opacity-0 transition-all z-10;
    }

    .main-arrow.left {
        @apply lg:left-4 md:left-3 sm:left-2 left-1;
    }

    .main-arrow.right {
        @apply lg:right-4 md:right-3 sm:right-2 right-1;
    }

    .section {
        @apply relative flex flex-col h-full w-full p-2 sm:p-4 md:p-5 lg:p-6 min-w-[320px] transition-all;

        transition-duration: 500ms;
    }

    .section-header {
        @apply self-center lg:text-7xl md:text-5xl sm:text-3xl text-xl;
    }

    .section-sub-headers {
        @apply flex gap-2 self-center lg:m-5 md:m-4 sm:m-3 m-2 lg:text-2xl md:text-xl sm:text-lg text-sm;
    }

    .section-content {
        @apply relative flex-1 overflow-hidden;
    }

    .article-scroller {
        transform: translate(0%, 0%);

        @apply absolute flex justify-center items-center gap-2 h-full w-full;
    }

    .article-trim {
        @apply h-3/5 w-4/5;
    }

    .article {
        @apply h-full w-full min-w-[320px] bg-slate-400;
    }

    .footer {
        @apply sm:h-1/6 h-1/3 w-full p-2 sm:p-3 md:p-4 lg:p-5 min-w-[320px];
    }

    .footer-content {
        @apply flex flex-col sm:flex-row items-center justify-evenly h-full w-full p-2 sm:p-3 md:p-4 lg:p-5 bg-opacity-50 bg-slate-600 rounded-md;
    }

    .footer-headers {
        @apply flex flex-col items-center justify-center w-full sm:w-2/5 h-1/2 sm:h-full;
    }

    .footer-header-main {
        @apply flex items-center justify-center h-1/4 text-xl sm:text-2xl;
    }

    .footer-headers-sub {
        @apply flex items-center justify-center gap-2;
    }

    .footer-header-sub {
        @apply text-base sm:text-lg;
    }

    .footer-links {
        @apply flex flex-col justify-around w-full sm:w-2/5 h-1/2 sm:h-full;
    }

    .footer-links-list {
        @apply flex flex-1 items-center justify-around;
    }

    .footer-link {
        @apply flex items-center justify-center h-full w-full;
    }

    /* .linkedin {
        background-image: url(/In-White-48.png);
        background-position: 100% 100%;
        background-size: 100% 100%;
        scale: .50 .75;
    } */
}

@keyframes fade-in {
    from {
        opacity: 0;
    }

    to {
        opacity: initial;
    }
}

@keyframes hop-up {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
        bottom: 2rem;
    }
}

@keyframes slot-in-left-to-right {
    from {
        transform: translateX(-600%);
        opacity: 0;
    }

    to {
        transform: translateX(0%);
        opacity: 100;
    }
}

@keyframes slot-in-right-to-left {
    from {
        transform: translateX(600%);
        opacity: 0;
    }

    to {
        transform: translateX(0%);
        opacity: 100;
    }
}

@keyframes blob-rotate {
    from {
        rotate: 0deg;
        scale: 1;
    }
    25% {
        scale: 1 1.5;
    }
    50% {
        scale: 1.25 1.75;
    }
    75% {
        scale: 1.5 1;
    }
    to {
        rotate: 360deg;
    }
}

@keyframes spin-first {
    from {
        rotate: 0deg;
    }
    to {
        rotate: -180deg;
    }
}

@keyframes spin-second {
    from {
        rotate: -180deg;
    }
    to {
        rotate: -360deg;
    }
}

/* @keyframes build-out {
    0%, 12.5%{
        display: none;
        width: 5%;
        opacity: 0;
    }
     25%, 37.5%{
        opacity: 33%;
        height: 2%;
    }
    50%, 62.5%{
        opacity: 66%;
        width: 100%;
    }
    75%, 100%{
        opacity: 100%;
        height: 100%;
        display: flex;
    }
} */

